# nokia-academy-2016

DesignPatterns/zadania/AbstractFactory/: CMakeLists.txt
DesignPatterns/zadania/AbstractFactory/src/: Display.cpp  Display.hpp  Gnome.cpp  Gnome.hpp  Kde.cpp  Kde.hpp  Windows.cpp  Windows.hpp  main.cpp
DesignPatterns/zadania/Adapter/: CMakeLists.txt
DesignPatterns/zadania/Adapter/src/: DrawingLibrary.cpp  PicturesLibrary.cpp  main.cpp
DesignPatterns/zadania/Adapter/src/Adapters/: Adapters.hpp
DesignPatterns/zadania/Strategy/: .CMakeLists.txt.swp  CMakeLists.txt
OOP/: notes
STL/: stlNotes
STL/ex1/: CMakeLists.txt  main.cpp
STL/ex10/: CMakeLists.txt  main.cpp
STL/ex11/: CMakeLists.txt  main.cpp
STL/ex2/: CMakeLists.txt  main.cpp
STL/ex3/: CMakeLists.txt  main.cpp
STL/ex4/: CMakeLists.txt  main.cpp
STL/ex5/: CMakeLists.txt  main.cpp
STL/ex6/: CMakeLists.txt  main.cpp
STL/ex7/: CMakeLists.txt  main.cpp
STL/ex8/: CMakeLists.txt  main.cpp
STL/ex9/: CMakeLists.txt  main.cpp
STL/finalEx/: CMakeLists.txt  main.cpp
STL/stl_ex2/: CMakeLists.txt
TDD/: tddnotes
Threads/: threadsNotes
codingPrinciples/: codingPrinciples
codingPrinciples/BadCalculator/: CMakeLists.txt  Complex.cpp  Complex.h  Integer.cpp  Integer.h  Number.h  StringToNumberConverterFactory.cpp  StringToNumberConverterFactory.h  main.cpp
exceptions/: notesExcept
exceptions/exceptions/: CMakeLists.txt
modern_cpp/: CMakeLists.txt  Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  Square.cpp  Square.hpp  main.cpp  notesModernCpp
(+48 files in other folders)
